--- a/bullmq/package.json
+++ b/bullmq/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node './index.js'",
+    "start": "node './src/index.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bullmq": "^4.11.1",
-    "csv-parse": "^5.5.0"
+    "csv-parse": "^5.5.0",
+    "express": "^4.18.2"
   }
 }
